--- a/poalimPortalOAS.yaml
+++ b/poalimPortalOAS.yaml
@@ -11,7 +11,7 @@ info:
     name: private
     url: https://yaelsoft.co.il
 servers:
-  - url: "https://34.160.49.110.nip.io/v1/poalim"
+  - url: "https://api-dev.yaelsoft.co.il/piba/v1/masac"
     description: Client2 API v1
 security:
   - ApiKeyAuth: []
